Process Hacker

2.33
 * NEW/IMPROVED:
   * Signatures for Windows 8 apps are now detected
   * Updated DotNetTools plugin:
     * Improved .NET assembly enumeration timeout handling
 * FIXED:

2.32
 * NOTE:
   * All executable files are now signed.
 * NEW/IMPROVED:
   * Updated for Windows 8.1
   * Added progress display for thread stacks
   * Updated ExtendedServices plugin:
     * Added new trigger data types
   * Updated NetworkTools plugin:
     * Updated UI
   * Updated OnlineChecks plugin:
     * Added file analyzed prompt
 * FIXED:
   * Fixed handling of long symbol names
   * Fixed Run As preventing Windows 8 apps from starting
   * Fixed console host information for Windows 8.1
   * Fixed reflected processes not terminating on Windows 8.1
   * Fixed CPU frequency on Windows 8.1

2.31
 * NEW/IMPROVED:
   * Updated ExtendedServices plugin:
     * Fixed some bugs relating to Windows 8
   * Updated OnlineChecks plugin:
     * Added upload progress
   * Updated UserNotes plugin:
     * Fixed bug where process priorities were not actually saved
 * FIXED:
   * Fixed module list not updating properly
   * DLL enumeration crash

2.30
 * NEW/IMPROVED:
   * Added "Icon click toggles visibility" option
   * Re-enabled powerful process termination on 32-bit Windows 8
   * Updated UserNotes plugin:
     * Added ability to save process priority
     * Added "Only for processes with the same command line" option for process comments
 * FIXED:
   * Fixed crash on CPUs without SSE2

2.29
 * NEW/IMPROVED:
   * Added App ID column for processes
   * Added new ASLR information for Windows 8
   * Added Restart to Boot Options and Hybrid Shutdown menu items for
     Windows 8
   * Added ability to specify processes by their names and inject and
     unload DLLs in command line
   * Removed 512 character limit when copying text
   * Moved Terminator to Miscellaneous menu
   * Updated default dbghelp.dll path for Windows SDK v8
   * Updated ExtendedServices plugin: