@@ -498,6 +498,7 @@ BEGIN
     LTEXT           "Yes?",IDC_PROTECTION,55,200,24,8
     LTEXT           "ASLR:",IDC_ASLRLABEL,91,200,20,8
     EDITTEXT        IDC_ASLR,116,199,131,12,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "<a>Company Name Link</a>",IDC_COMPANYNAME_LINK,"SysLink",NOT WS_VISIBLE | WS_TABSTOP,17,234,72,11
 END
 
 IDD_PROCMODULES DIALOGEX 0, 0, 260, 260
