@@ -7,6 +7,21 @@ typedef struct _CATALOG_INFO
     WCHAR wszCatalogFile[MAX_PATH];
 } CATALOG_INFO, *PCATALOG_INFO;
 
+typedef struct tagCRYPTUI_VIEWSIGNERINFO_STRUCT {
+    DWORD dwSize;
+    HWND hwndParent;
+    DWORD dwFlags;
+    LPCTSTR szTitle;
+    CMSG_SIGNER_INFO *pSignerInfo;
+    HCRYPTMSG hMsg;
+    LPCSTR pszOID;
+    DWORD_PTR dwReserved;
+    DWORD cStores;
+    HCERTSTORE *rghStores;
+    DWORD cPropSheetPages;
+    LPCPROPSHEETPAGE rgPropSheetPages;
+} CRYPTUI_VIEWSIGNERINFO_STRUCT, *PCRYPTUI_VIEWSIGNERINFO_STRUCT;
+
 typedef BOOL (WINAPI *_CryptCATAdminCalcHashFromFileHandle)(
     HANDLE hFile,
     DWORD *pcbHash,
@@ -92,6 +107,10 @@ typedef PCCERT_CONTEXT (WINAPI *_CertDuplicateCertificateContext)(
 
 typedef BOOL (WINAPI *_CertFreeCertificateContext)(
     __in PCCERT_CONTEXT pCertContext
+    );
+
+typedef BOOL (WINAPI *_CryptUIDlgViewSignerInfo)(
+    __in CRYPTUI_VIEWSIGNERINFO_STRUCT *pcvsi
     );
 
 #endif
